--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<div class="question-space">
+        <p><strong>Question:</strong> What is the capital of India?</p>
+        <form>
+            <input type="radio" id="new-delhi" name="capital" value="New Delhi">
+            <label for="new-delhi">New Delhi</label><br>
+            <input type="radio" id="mumbai" name="capital" value="Mumbai">
+            <label for="mumbai">Mumbai</label><br>
+        </form>
+        <blockquote >
+            "New Delhi is the capital of India and an administrative district of NCT Delhi."
+          
+        </blockquote>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
