--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 
 	<div class="question-space">
-        <p><strong>Question:</strong> What is the capital of India?</p>
+        <p> What is the capital of India?</p>
         <form>
             <input type="radio" id="new-delhi" name="capital" value="New Delhi">
             <label for="new-delhi">New Delhi</label><br>
