--- a/main.html
+++ b/main.html
@@ -17,10 +17,11 @@
             <input type="radio" id="mumbai" name="capital" value="Mumbai">
             <label for="mumbai">Mumbai</label><br>
         </form>
-        <blockquote >
-            "New Delhi is the capital of India and an administrative district of NCT Delhi."
-          
-        </blockquote>
+        <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+	    "New Delhi is the capital of India and an administrative district of NCT Delhi."
+	
+		</blockquote>
+
     </div>
     <script type="text/javascript" src="./script.js">
 </script>
